changes in index2 page

--- a/src/index2.html
+++ b/src/index2.html
@@ -319,7 +319,7 @@
 </section>
 
 
-    <section class="md:py-24 py-10 md:px-28 lg:px-32 px-8 bg-gray-100">
+    <section class="md:py-24 py-10 sm:px-16 lg:px-32 px-8 bg-gray-100">
         <div class="max-w-screen-xl mx-auto">
           <h1 class="md:text-4xl text-2xl text-center   font-thin text-black">Choose Your Subscription</h1>
           <p class="text-center py-4 text-lg font-open">
@@ -344,7 +344,7 @@
       
           <!-- Sections -->
           <div id="digital-sa" class="content-section">
-            <div id="qbank-digital-sa" class="grid grid-cols-1 md:justify-items-center md:grid-cols-4 gap-4 justify-center">
+            <div id="qbank-digital-sa" class="grid grid-cols-1 md:justify-items-center lg:grid-cols-4 sm:grid-cols-2  gap-4 justify-center">
               <!-- Cards for Digital-SA QBank -->
               <!-- Add your card HTML here -->
               <div class="bg-white rounded-lg border border-1 py-8 px-8  flex flex-col">
