--- a/src/det.html
+++ b/src/det.html
@@ -664,7 +664,7 @@
     </section>
 
      <!--What's Awesome-->
-    <div class="">
+     <div class="">
         <section class="max-w-screen-xl px-4 md:pb-8 mx-auto sm:px-16">
             <h1 class="py-2 text-3xl font-bold text-center font-noto md:text-5xl">What's Awesome</h1>
             <div class="grid max-w-screen-xl grid-cols-12 mx-auto my-4 sm:gap-4 md:gap-8 ">
@@ -700,10 +700,11 @@
                     <div class="w-full pt-2 mb-2 border-t border-black"></div>  
 
                     <p>Our top notch training, at your convenience!</p>
-                    <div class="my-3 ">
+                    <div class="mt-14 mb-5">
                         <button data-popup="popup2"
-                            class="px-5 py-3 my-3 font-semibold text-white bg-gray-600 hover:bg-gray-500 duration-300 ease-in-out rounded-lg  lg:absolute bottom-[30px] ">Attend a demo</button>
-                    </div>
+                            class="px-5 py-3 mt-10 font-semibold text-white bg-gray-600 hover:bg-gray-500 duration-300 ease-in-out rounded-lg  lg:absolute bottom-[30px] ">Attend a demo</button>
+                    
+                        </div>
                 </div>
                 <!-- third -->
                 <div class="relative col-span-12 p-4 my-2 bg-gray-100 shadow-xl lg:mx-5 sm:col-span-6 lg:col-span-4 md:p-6 rounded-xl">
@@ -727,6 +728,7 @@
             </div>
         </section>
     </div>
+
 
     <!--Data Popup-->
     <div id="popup2"
@@ -1034,15 +1036,15 @@
         <div class="p-4 sm:px-0">
             <div class="max-w-screen-xl mx-auto sm:px-[60px]">
                 <div class="space-y-6">
-                    <div class="justify-between px-2 sm:px-4 lg:flex md:pt-4">
+                    <div class="justify-between px-2 sm:px-4 lg:flex  md:pt-4">
                         <!--footer logo-->
-                        <div class="py-2 lg:w-1/4 md:p-0 d:mb-6">
-                            <div class="">
+                        <div class="py-2 lg:w-1/4 md:p-0 d:mb-6 ">
+                            <div class="flex lg:flex-col sm:flex-row justify-between flex-wrap lg:justify-none sm:py-4 lg:py-0">
                                 <img src="https://prep.firstacademy.in/images/logo.png" width="180px" height="35px" alt="fa logo" />
                                 <br>
                                 <a href="#" class="mt-5 test-sm font-open">
 
-                                    <div class="flex flex-row-2">
+                                    <div class="flex flex-row">
                                         <div>
                                             <svg xmlns="https://g.page/packetprepjobs" viewBox="0 0 20 20"
                                                 fill="currentColor" class="w-5 h-5 mr-1 text-cyan-600">
