Update color codes and add new files

--- a/src/ug.html
+++ b/src/ug.html
@@ -311,10 +311,12 @@
     <!-- body.. -->
     <div class="bg-white">
         <div class="items-center justify-between max-w-screen-xl px-4 py-4 mx-auto sm:px-16">
-            <p class="mb-10 text-4xl font-noto text-center text-white lg:text-5xl md:text-5xl">Admissions
+            <p class="mb-10 text-4xl font-noto text-center text-teal-500 lg:text-5xl md:text-5xl">Admissions
                 into top Undergrad Programs!</p>
-            <p class="flex items-center justify-center pb-10"><img src="../assets/ug1.svg" alt="" class="w-1/2"></p>
-            <div class="grid items-center justify-center gap-5 mb-4 lg:flex lg:gap-10">
+                <p class="flex items-center justify-center pb-10">
+                    <img src="../assets/ug1.svg" alt="" class="w-full sm:w-96 lg:w-1/2">
+                </p>
+                  <div class="grid items-center justify-center gap-5 mb-4 lg:flex lg:gap-10">
                 <button
                     class="py-3 text-xl font-semibold text-center text-black bg-teal-400 hover:bg-teal-500 rounded-lg hover-translate-y w-72">Get
                     a call back</button>
@@ -977,10 +979,10 @@
     </div>
     <div class="bg-gradient-to-r from-teal-400 to-teal-200">
         <div class="justify-between max-w-screen-xl px-4 py-6 mx-auto items-cente sm:px-16">
-            <p class="mb-5 text-3xl font-bold font-noto  text-black lg:text-5xl md:text-5xl">Remember these!</p>
+            <p class="mb-5 text-3xl font-bold font-open  text-black lg:text-5xl md:text-5xl">Remember these!</p>
             <p class="pb-3 text-lg font-bold font-open  text-black">These are costs that most applicants forget to take into
                 account while budgeting for their admission process</p>
-            <div class="p-5 text-2xl font-bold text-white bg-gray-900 rounded-lg lg:flex gap-60 lg:text-3xl">
+            <div class="p-5 text-2xl font-bold text-teal-500 bg-gray-900 rounded-lg lg:flex gap-60 lg:text-3xl">
                 <div class="">
                     <ul>
                         <li class="pb-3"><svg width="25px" height="25px" class="inline" fill="#ff1a6a"
@@ -998,7 +1000,7 @@
                                     </path>
                                 </g>
                             </svg>
-                            <p class="inline font-noto "> Application Fees</p>
+                            <p class="inline font-open "> Application Fees</p>
                         </li>
                         <li class="pb-3"><svg width="25px" height="25px" class="inline" fill="#ff1a6a"
                                 viewBox="0 0 200 200" data-name="Layer 1" id="Layer_1"
@@ -1015,7 +1017,7 @@
                                     </path>
                                 </g>
                             </svg>
-                            <p class="inline font-noto "> WES Fees</p>
+                            <p class="inline font-open "> WES Fees</p>
                         </li>
                         <li class="pb-3"><svg width="25px" height="25px" class="inline" fill="#ff1a6a"
                                 viewBox="0 0 200 200" data-name="Layer 1" id="Layer_1"
@@ -1032,7 +1034,7 @@
                                     </path>
                                 </g>
                             </svg>
-                            <p class="inline font-noto "> Visa Fees</p>
+                            <p class="inline font-open "> Visa Fees</p>
                         </li>
                         <li class="pb-3"><svg width="25px" height="25px" class="inline" fill="#ff1a6a"
                                 viewBox="0 0 200 200" data-name="Layer 1" id="Layer_1"
@@ -1049,7 +1051,7 @@
                                     </path>
                                 </g>
                             </svg>
-                            <p class="inline font-noto "> Vaccine Fees</p>
+                            <p class="inline font-open "> Vaccine Fees</p>
                         </li>
                         <li class="pb-3"><svg width="25px" height="25px" class="inline" fill="#ff1a6a"
                                 viewBox="0 0 200 200" data-name="Layer 1" id="Layer_1"
@@ -1066,7 +1068,7 @@
                                     </path>
                                 </g>
                             </svg>
-                            <p class="inline font-noto "> Flight Tickets</p>
+                            <p class="inline font-open "> Flight Tickets</p>
                         </li>
                         <li class="pb-3"><svg width="25px" height="25px" class="inline" fill="#ff1a6a"
                                 viewBox="0 0 200 200" data-name="Layer 1" id="Layer_1"
@@ -1083,7 +1085,7 @@
                                     </path>
                                 </g>
                             </svg>
-                            <p class="inline font-noto "> Deposit payment</p>
+                            <p class="inline font-open "> Deposit payment</p>
                         </li>
                     </ul>
                 </div>
@@ -1104,7 +1106,7 @@
                                     </path>
                                 </g>
                             </svg>
-                            <p class="inline font-noto "> Course charges</p>
+                            <p class="inline font-open "> Course charges</p>
                         </li>
                         <li class="pb-3"><svg width="25px" height="25px" class="inline" fill="#ff1a6a"
                                 viewBox="0 0 200 200" data-name="Layer 1" id="Layer_1"
@@ -1121,7 +1123,7 @@
                                     </path>
                                 </g>
                             </svg>
-                            <p class="inline font-noto "> Score Reporting</p>
+                            <p class="inline font-open "> Score Reporting</p>
                         </li>
                         <li class="pb-3"><svg width="25px" height="25px" class="inline" fill="#ff1a6a"
                                 viewBox="0 0 200 200" data-name="Layer 1" id="Layer_1"
@@ -1138,7 +1140,7 @@
                                     </path>
                                 </g>
                             </svg>
-                            <p class="inline font-noto "> SEVIS Fees</p>
+                            <p class="inline font-open "> SEVIS Fees</p>
                         </li>
                         <li class="pb-3"><svg width="25px" height="25px" class="inline" fill="#ff1a6a"
                                 viewBox="0 0 200 200" data-name="Layer 1" id="Layer_1"
@@ -1155,7 +1157,7 @@
                                     </path>
                                 </g>
                             </svg>
-                            <p class="inline font-noto "> Medical Tests</p>
+                            <p class="inline font-open "> Medical Tests</p>
                         </li>
                         <li class="pb-3"><svg width="25px" height="25px" class="inline" fill="#ff1a6a"
                                 viewBox="0 0 200 200" data-name="Layer 1" id="Layer_1"
@@ -1172,7 +1174,7 @@
                                     </path>
                                 </g>
                             </svg>
-                            <p class="inline font-noto "> Advance Tuition Fees</p>
+                            <p class="inline font-open "> Advance Tuition Fees</p>
                         </li>
                     </ul>
                 </div>
