--- a/src/masters.html
+++ b/src/masters.html
@@ -456,7 +456,7 @@
              </div>
           <p class="flex items-center justify-center pb-10">
              <img
-            src="/assets/file_MastersHeroBannera.jpg" width="440"
+            src="http://127.0.0.1:5500/assets/file_MastersHeroBannera.jpg" width="440"
             class="img-fluid w-75 w-lg-50 pb-3 "
           />
         </p>
