--- a/src/masters.html
+++ b/src/masters.html
@@ -456,7 +456,7 @@
              </div>
           <p class="flex items-center justify-center pb-10">
              <img
-            src="assets/file_MastersHeroBannera.jpg" width="440"
+            src="/assets/file_MastersHeroBannera.jpg" width="440"
             class="img-fluid w-75 w-lg-50 pb-3 "
           />
         </p>
@@ -680,10 +680,10 @@
     <!--remeber these-->
     <div class="bg-gradient-to-r from-teal-400 to-teal-200">
       <div class="justify-between max-w-screen-xl px-4 py-6 mx-auto items-cente sm:px-16">
-          <p class="mb-5 text-3xl font-bold font-open  text-black lg:text-5xl md:text-5xl">Remember these!</p>
+          <p class="mb-5 text-3xl font-bold font-noto  text-black lg:text-5xl md:text-5xl">Remember these!</p>
           <p class="pb-3 text-lg font-bold font-open  text-black">These are costs that most applicants forget to take into
               account while budgeting for their admission process</p>
-          <div class="p-5 text-2xl font-bold text-teal-500 bg-gray-900 rounded-lg lg:flex gap-60 lg:text-3xl">
+          <div class="p-5 text-2xl font-bold text-white bg-teal-500 rounded-lg lg:flex gap-60 lg:text-3xl">
               <div class="">
                   <ul>
                       <li class="pb-3"><svg width="25px" height="25px" class="inline" fill="#ff1a6a"
@@ -1332,7 +1332,7 @@
           class="justify-center max-w-screen-xl px-4 mx-auto mt-4 lg:justify-between lg:flex sm:px-16"
         >
           <div
-            class="flex flex-wrap justify-center col-span-6 pb-4 my-2 my-auto space-x-4 lg:pb-0 place-content-start sm:gap-4 lg:justify-start"
+            class="flex flex-wrap justify-center col-span-6 pb-4 my-2 space-x-4 lg:pb-0 place-content-start sm:gap-4 lg:justify-start"
           >
             <div class="col-span-2 text-start">
               <a
@@ -1351,7 +1351,7 @@
           </div>
 
           <div
-            class="flex flex-wrap justify-center col-span-6 my-2 my-auto space-x-4 lg:space-x-2 place-content-end sm:gap-4 lg:justify-end"
+            class="flex flex-wrap justify-center col-span-6 my-auto space-x-4 lg:space-x-2 place-content-end sm:gap-4 lg:justify-end"
           >
             <a
               href="https://www.facebook.com/firstacademy.in/"
