--- a/src/ug.html
+++ b/src/ug.html
@@ -979,10 +979,10 @@
     </div>
     <div class="bg-gradient-to-r from-teal-400 to-teal-200">
         <div class="justify-between max-w-screen-xl px-4 py-6 mx-auto items-cente sm:px-16">
-            <p class="mb-5 text-3xl font-bold font-open  text-black lg:text-5xl md:text-5xl">Remember these!</p>
+            <p class="mb-5 text-3xl font-bold font-noto  text-black lg:text-5xl md:text-5xl">Remember these!</p>
             <p class="pb-3 text-lg font-bold font-open  text-black">These are costs that most applicants forget to take into
                 account while budgeting for their admission process</p>
-            <div class="p-5 text-2xl font-bold text-teal-500 bg-gray-900 rounded-lg lg:flex gap-60 lg:text-3xl">
+            <div class="p-5 text-2xl font-bold text-white bg-teal-500 rounded-lg lg:flex gap-60 lg:text-3xl">
                 <div class="">
                     <ul>
                         <li class="pb-3"><svg width="25px" height="25px" class="inline" fill="#ff1a6a"
