--- a/src/studyabroad.html
+++ b/src/studyabroad.html
@@ -757,8 +757,7 @@
         >
           <div class="d-flex justify-content-center align-items-center">
             <span
-              class="badge rounded-pill bg-primary mr-2"
-              style="color: #ffffff"
+              class="badge rounded-pill bg-primary text-teal-600 mr-2"
               >Latest Post</span
             >
             <a
@@ -776,8 +775,8 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
     </style>
-    <div style="background: #7776fe">
-      <div class="pb-5" style="background-color: #7776fe">
+    <div >
+      <div class="pb-5">
         <div
           class="container d-flex justify-content-between flex-column align-items-center"
           style="min-height: 70vh"
